# markov

./: .gitignore  CMakeLists.txt  FileDownloader.cpp  FileDownloader.h  FileStorage.cpp  FileStorage.h  MarkovGenerator.cpp  MarkovGenerator.h  MarkovSelector.cpp  MarkovSelector.h  README.md  commands.cpp  commands.h  consts.cpp  consts.h  helpers.cpp  helpers.h  main.cpp  parse_file.cpp  parse_file.h  tests.cpp
exceptions/: DirectoryNotFoundException.h  FileHasLessWordsException.h  FileNotFoundException.h  StartingTextHasLessWordsException.h
